--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>my-electron-crasher</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
@@ -14,12 +14,10 @@
     />
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>, Chromium
-    <span id="chrome-version"></span>, and Electron
-    <span id="electron-version"></span>.
-
+    <img src="./assets/img/logo.png" />
+    <h1>my-electron-crasher</h1>
+    <div id="buttons-container"></div>
     <!-- You can also require other files to run in this process -->
-    <script src="./dist/renderer.js"></script>
+    <script src="./dist/src/renderer.js"></script>
   </body>
 </html>
