--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
   <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
-  <link rel="stylesheet" href="./assets/css/styles.css">
+  <link rel="stylesheet" href="./src/assets/css/styles.css">
   <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
@@ -15,7 +15,7 @@
   <div class="container-fluid">
     <div class="row pt-4">
       <div class="col">
-        <img src="./assets/img/logo.png" />
+        <img src="./src/assets/img/logo.png" />
       </div>
     </div>
     <div class="row">
