open logo and urls in external browser -- not in electron app.

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     </head>
     <body>
         <div class="container">
-            <a href="https://www.bugsplat.com"><img class="logo" src="./src/assets/img/bugsplat-logo.png"></a>
+            <a id="bugsplat_logo_url" href="https://www.bugsplat.com"><img class="logo" src="./src/assets/img/bugsplat-logo.png"></a>
 
             <div class="content">
                 <h1>
                     Welcome to my-electron-crasher
                 </h1>
                 <p>
-                    This is a sample application that demonstrates <a href="www.bugsplat.com">BugSplat</a> error
-                    reporting
-                    for <a href="www.electronjs.org">Electron</a> applications build with JavaScript or TypeScript.
+                    This is a sample application that demonstrates <a id="bugsplat_url" href="https://www.bugsplat.com">BugSplat</a>
+                    error reporting for <a id="electron_url" href="https://www.electronjs.org">Electron</a> applications build with JavaScript
+                    or TypeScript.
                 </p>
                 <div class="errors">
                     <h2>Errors</h2>
                     <button class="error" id="main-error-button">
                         <h2>Main Error</h2>
                         <h4>unhandled rejected promise</h4>
-                        <h4>WILL TERMINATE APP</h4>
+                    <h4>WILL TERMINATE APP</h4>
                     </button>
                     <button class="error" id="renderer-error-button">
                         <h2>Renderer Error</h2>
