--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <div class="content">
                 <h1>
-                    Welcome to my-electron-crasher
+                    Welcome to my-electron-crasher!
                 </h1>
                 <p>
                     This is a sample application that demonstrates <a id="bugsplat_url" href="https://www.bugsplat.com">BugSplat</a>
