fix: capitalize plugin in button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <h4>uncaught exception</h4>
                     </button>
                     <button class="error" id="native-crash-button">
-                        <h2>Native (plugin) Crash</h2>
+                        <h2>Native (Plugin) Crash</h2>
                         <h4>dereference null pointer in native code</h4>
                         <h4>WILL TERMINATE APP</h4>
                     </button>
