--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <button class="error" id="native-crash-button">
                         <h2>Native Crash</h2>
                         <p>Calls process.crash</p>
+                        <h4>WILL TERMINATE APP</h4>
                     </button>
                     <button class="error" id="addon-crash-button">
                         <h2>Native (Addon) Crash</h2>
